--- a/about.html
+++ b/about.html
@@ -28,9 +28,17 @@ header-img: "img/about-bg.jpg"
     <h5>文章</h5>
     <ul class="publication">
         <li>
+            B Wang, H Vu, I Kim & C Cai. (2021).
+            Short-term traffic flow prediction in bike-sharing networks.
+            Journal of Intelligent Transportation Systems, Volume 0, Page 1-18.
+            <a href="https://doi.org/10.1080/15472450.2021.1904921">
+                https://doi.org/10.1080/15472450.2021.1904921
+            </a>
+        </li>
+        <li>
             B Wang, H Vu & I Kim. (2019).
             Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
-            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States. (Accepted).
+            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States.
         </li>
         <li>
             B Wang, K Shaaban & I Kim. (2019).
@@ -83,9 +91,17 @@ header-img: "img/about-bg.jpg"
     <h5>Publication</h5>
     <ul class="publication">
         <li>
+            B Wang, H Vu, I Kim & C Cai. (2021).
+            Short-term traffic flow prediction in bike-sharing networks.
+            Journal of Intelligent Transportation Systems, Volume 0, Page 1-18.
+            <a href="https://doi.org/10.1080/15472450.2021.1904921">
+                https://doi.org/10.1080/15472450.2021.1904921
+            </a>
+        </li>
+        <li>
             B Wang, H Vu & I Kim. (2019).
             Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
-            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States. (Accepted).
+            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States.
         </li>
         <li>
             B Wang, K Shaaban & I Kim. (2019).
