--- a/projects/3DResNet/index.html
+++ b/projects/3DResNet/index.html
@@ -34,7 +34,7 @@
       Each 16*8 grids represents the area the New York bike sharing system.
       There are two different types of traffic flow: flow in and flow out, which means the number of bikes been borrowed or returned in every square.
       This figure shows the forecasted result by 3D ConvNets from 22/09/2014 to 01/10/2014.
-      <a href="http://resuly.me" target="_blank">Click here</a> for more information.
+      <a href="https://doi.org/10.1080/15472450.2021.1904921" target="_blank">Click here</a> for more information.
     </p>
     <p>
       Made by <a href="http://resuly.me" target="_blank">resuly</a>, March 2019.
