--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ header-img: "img/about-bg.jpg"
         <li>
             B Wang, K Shaaban & I Kim. (2019).
             Revealing the hidden features in traffic prediction via entity embedding.
-            Personal and Ubiquitous Computing. 
+            Personal and Ubiquitous Computing.
             <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">
                 http://link.springer.com/article/10.1007/s00779-019-01333-x
             </a>
@@ -73,6 +73,11 @@ header-img: "img/about-bg.jpg"
               https://doi.org/10.1061/9780784480915.006
             </a>
         </li>
+    </ul>
+    <h5>审稿人</h5>
+    <ul class="publication">
+        <li>IET Intelligent Transport Systems</li>
+        <li>IEEE Transactions on Intelligent Transportation Systems</li>
     </ul>
 </div>
 
@@ -136,6 +141,12 @@ header-img: "img/about-bg.jpg"
               https://doi.org/10.1061/9780784480915.006
             </a>
         </li>
+    </ul>
+
+    <h5>Reviewer</h5>
+    <ul class="publication">
+        <li>IET Intelligent Transport Systems</li>
+        <li>IEEE Transactions on Intelligent Transportation Systems</li>
     </ul>
 </div>
 
