--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hi, this is Bo Wang."
-header-img: "img/about-bg.jpg"
+header-img: "img/post-bg-24.jpg"
 ---
 
 <!-- Language Selector -->
