--- a/about.html
+++ b/about.html
@@ -97,10 +97,9 @@ header-img: "img/post-bg-24.jpg"
     <ul class="publication">
         <li>
             Wang, B., Mohajerpoor, R., Cai, C., Vu, H. L., & Kim, I. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. 
-            URL: <a href="https://doi.org/10.1080/15472450.2021.1904921">https://doi.org/10.1080/15472450.2021.1904921</a>
+            URL: <a href="http://arxiv.org/abs/2111.05990">http://arxiv.org/abs/2111.05990</a>
             (Accepted & invited to present at Traffic4cast Competition, NeurIPS 2021)
         </li>
-        
         <li>
             Wang, B., Vu, H. L., Kim, I., & Cai, C. (2021). Short-term traffic flow prediction in bike-sharing networks.
             <i>Journal of Intelligent Transportation Systems, 1-18</i>. 
@@ -137,7 +136,7 @@ header-img: "img/post-bg-24.jpg"
         <li>
             Wang, B., Hua, L., & Kim, I. (2018). 
             Social Media Application for Illegal Parking Problem. 
-            Paper presented at the <i>CICTP 2017: Transportation Reform and Change—Equity, Inclusiveness, Sharing, and Innovation, Shanghai, China</i>. URL: https://doi.org/10.1061/9780784480915.006
+            Paper presented at the <i>CICTP 2017: Transportation Reform and Change—Equity, Inclusiveness, Sharing, and Innovation, Shanghai, China</i>. 
             URL: <a href="https://doi.org/10.1061/9780784480915.006">
               https://doi.org/10.1061/9780784480915.006
             </a>
