--- a/about.html
+++ b/about.html
@@ -28,54 +28,59 @@ header-img: "img/post-bg-24.jpg"
     <h5>文章</h5>
     <ul class="publication">
         <li>
-            B Wang, H Vu, I Kim & C Cai. (2021).
-            Short-term traffic flow prediction in bike-sharing networks.
-            Journal of Intelligent Transportation Systems, Volume 0, Page 1-18.
-            <a href="https://doi.org/10.1080/15472450.2021.1904921">
+            Wang, B., Mohajerpoor, R., Cai, C., Vu, H. L., & Kim, I. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. 
+            URL: <a href="http://arxiv.org/abs/2111.05990">http://arxiv.org/abs/2111.05990</a>
+            (Accepted & invited to present at Traffic4cast Competition, NeurIPS 2021)
+        </li>
+        <li>
+            Wang, B., Vu, H. L., Kim, I., & Cai, C. (2021). Short-term traffic flow prediction in bike-sharing networks.
+            <i>Journal of Intelligent Transportation Systems, 1-18</i>. 
+            URL: <a href="https://doi.org/10.1080/15472450.2021.1904921">
                 https://doi.org/10.1080/15472450.2021.1904921
             </a>
         </li>
         <li>
-            B Wang, H Vu & I Kim. (2019).
+            B Wang, H Vu & I Kim. (2020).
             Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
-            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States.
+            <i>Transportation Research Board 99th Annual Meeting, Washington, D.C., United States</i>.
+        </li>
+
+        <li>
+            Wang, B., Shaaban, K., & Kim, I. (2020).
+            Revealing the hidden features in traffic prediction via entity embedding. 
+            <i>Personal and Ubiquitous Computing, 25(1), 21-31</i>. 
+            URL: <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">http://link.springer.com/article/10.1007/s00779-019-01333-x</a>
+        </li>
+
+        <li>
+            Wang, B., Shaaban, K., & Kim, I. (2019). 
+            Reveal the hidden layer via entity embedding in traffic prediction. 
+            Paper presented at <i>10th International Conference on Ambient Systems, Networks and Technologies (ANT), Leuven, Belgium</i>. 
+            URL: <a href="https://doi.org/10.1016/j.procs.2019.04.025">https://doi.org/10.1016/j.procs.2019.04.025</a>
+        </li>
+        
+        <li>
+            Wang, B., & Kim, I. (2018). 
+            Short-term prediction for bike-sharing service using machine learning. 
+            Paper presented at the <i>International Symposium of Transport Simulation (ISTS’18) and the International Workshop on Traffic Data Collection and its Standardization (IWTDCS’18), Matsuyama Japan</i>. 
+            URL: <a href="https://doi.org/10.1016/j.trpro.2018.11.029">https://doi.org/10.1016/j.trpro.2018.11.029</a>
         </li>
         <li>
-            B Wang, K Shaaban & I Kim. (2019).
-            Revealing the hidden features in traffic prediction via entity embedding.
-            Personal and Ubiquitous Computing.
-            <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">
-                http://link.springer.com/article/10.1007/s00779-019-01333-x
-            </a>
-        </li>
-        <li>
-            B Wang, K Shaaban & I Kim. (2019).
-            Reveal the hidden layer via entity embedding in traffic prediction.
-            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
-            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
-              https://doi.org/10.1016/j.procs.2019.04.025
-            </a>
-        </li>
-        <li>
-            B Wang & I Kim. (2018).
-            Short-term prediction for bike-sharing service using machine learning.
-            Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
-            <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
-              https://doi.org/10.1016/j.trpro.2018.11.029
-            </a>
-        </li>
-        <li>
-            B Wang, H Liang, & I Kim. (2018).
-            Social media application for illegal parking problem.
-            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
-            Reston VA USA: American Society of Civil Engineers.
-            <a href="https://doi.org/10.1061/9780784480915.006">
+            Wang, B., Hua, L., & Kim, I. (2018). 
+            Social Media Application for Illegal Parking Problem. 
+            Paper presented at the <i>CICTP 2017: Transportation Reform and Change—Equity, Inclusiveness, Sharing, and Innovation, Shanghai, China</i>. 
+            URL: <a href="https://doi.org/10.1061/9780784480915.006">
               https://doi.org/10.1061/9780784480915.006
             </a>
         </li>
+        <li>
+            Li, Y., Hu, Q., & Wang, B. (2016). Research on Positioning Accuracy with Kalman Filter for Road Maintenance Equipment. <i>Technology Innovation and Application, 36, 46-48</i>.
+        </li>
+        
     </ul>
     <h5>审稿人</h5>
     <ul class="publication">
+        <li>Transportation Research Board (TRB) Annual Meeting</li>
         <li>IET Intelligent Transport Systems</li>
         <li>IEEE Transactions on Intelligent Transportation Systems</li>
     </ul>
@@ -85,8 +90,7 @@ header-img: "img/post-bg-24.jpg"
 <div class="en post-container">
     <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
     <h5>About Me</h5>
-    <p>A student from Monash University, majoring in Transportation Systems, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
-    <p>FYI, I am a member of <a href="http://inhi.kim" target="_blank">Transport and Urban Planning Arena</a>, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
+    <p>A PhD student at Monash University, using deep learning and web development to improve intelligent transportation systems.</p>
 
     <h5>Contact</h5>
     <p>
