--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ header-img: "img/post-bg-24.jpg"
     <h5>文章</h5>
     <ul class="publication">
         <li>
-            Wang, B., Mohajerpoor, R., Cai, C., Vu, H. L., & Kim, I. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. 
+            Wang, B., Mohajerpoor, R., Cai, C., Kim, I. & Vu H. L. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet.
             URL: <a href="http://arxiv.org/abs/2111.05990">http://arxiv.org/abs/2111.05990</a>
             (Accepted & invited to present at Traffic4cast Competition, NeurIPS 2021)
         </li>
@@ -100,7 +100,7 @@ header-img: "img/post-bg-24.jpg"
     <h5>Publication</h5>
     <ul class="publication">
         <li>
-            Wang, B., Mohajerpoor, R., Cai, C., Vu, H. L., & Kim, I. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. 
+            Wang, B., Mohajerpoor, R., Cai, C., Kim, I. & Vu H. L. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet.
             URL: <a href="http://arxiv.org/abs/2111.05990">http://arxiv.org/abs/2111.05990</a>
             (Accepted & invited to present at Traffic4cast Competition, NeurIPS 2021)
         </li>
