--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -264,7 +264,7 @@ layout: default
 									<span>Wordpress</span>
 									<span>Deep Learning</span>
 									<span class="link">
-										<a target="_blank" href="http://www.v2tm.com/">View</a>
+										<a target="_blank" href="http://www.v2tm.com/d2">View</a>
 									</span>
 								</li>
 							</ul>
