--- a/about.html
+++ b/about.html
@@ -80,9 +80,12 @@ header-img: "img/post-bg-24.jpg"
     </ul>
     <h5>审稿人</h5>
     <ul class="publication">
+        <li>Transactions on Intelligent Transportation Systems</li>
         <li>Transportation Research Board (TRB) Annual Meeting</li>
+        <li>Journal of Advanced Transportation</li>
         <li>IET Intelligent Transport Systems</li>
-        <li>IEEE Transactions on Intelligent Transportation Systems</li>
+        <li>Transportation Letters</li>
+        <li>Physica A: Statistical Mechanics and Its Applications</li>
     </ul>
 </div>
 
@@ -153,9 +156,12 @@ header-img: "img/post-bg-24.jpg"
 
     <h5>Reviewer</h5>
     <ul class="publication">
+        <li>Transactions on Intelligent Transportation Systems</li>
         <li>Transportation Research Board (TRB) Annual Meeting</li>
+        <li>Journal of Advanced Transportation</li>
         <li>IET Intelligent Transport Systems</li>
-        <li>IEEE Transactions on Intelligent Transportation Systems</li>
+        <li>Transportation Letters</li>
+        <li>Physica A: Statistical Mechanics and Its Applications</li>
     </ul>
 </div>
 
