--- a/about.html
+++ b/about.html
@@ -101,27 +101,30 @@ header-img: "img/post-bg-24.jpg"
     <ul class="publication">
         <li>
             Wang, B., Mohajerpoor, R., Cai, C., Vu, H. L., & Kim, I. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. 
-            URL: <a href="http://arxiv.org/abs/2111.05990">http://arxiv.org/abs/2111.05990</a>
-            (Accepted & invited to present at Traffic4cast Competition, NeurIPS 2021)
+            URL: <a href="http://arxiv.org/abs/2111.05990" target="_blank">http://arxiv.org/abs/2111.05990</a> 
+            (Presented at Traffic4cast Competition, NeurIPS 2021) | (<a href="https://github.com/resuly/Traffic4Cast-2021" target="_blank">Github</a>) | (<a href="https://youtu.be/YHW70ZAO7b0" target="_blank">Video</a>)
         </li>
         <li>
             Wang, B., Vu, H. L., Kim, I., & Cai, C. (2021). Short-term traffic flow prediction in bike-sharing networks.
             <i>Journal of Intelligent Transportation Systems, 1-18</i>. 
             URL: <a href="https://doi.org/10.1080/15472450.2021.1904921">
                 https://doi.org/10.1080/15472450.2021.1904921
-            </a>
+            </a> | Talk at UTS-Monash joint seminar on “A.I. for transportation Applications” 2021 (<a href="https://bit.ly/3hxl1AS" target="_blank">Video</a>) | (<a href="https://github.com/resuly/Traffic-3DResnets">Github<a>) | (<a href="https://resuly.me/projects/3DResNet/flow.html">Demo</a>)
         </li>
         <li>
             B Wang, H Vu & I Kim. (2020).
             Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
-            <i>Transportation Research Board 99th Annual Meeting, Washington, D.C., United States</i>.
+            <i>Transportation Research Board 99th Annual Meeting, Washington, D.C., United States</i>. 
+            | (<a href="https://resuly.me/projects/feature-visualization/">Demo</a>)
         </li>
 
         <li>
             Wang, B., Shaaban, K., & Kim, I. (2020).
             Revealing the hidden features in traffic prediction via entity embedding. 
             <i>Personal and Ubiquitous Computing, 25(1), 21-31</i>. 
-            URL: <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">http://link.springer.com/article/10.1007/s00779-019-01333-x</a>
+            URL: <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">http://link.springer.com/article/10.1007/s00779-019-01333-x</a> 
+            | (<a href="https://github.com/resuly/Traffic-Embedding">Github<a>) 
+            | (<a href="https://resuly.me/projects/embedding/">Demo<a>)
         </li>
 
         <li>
