--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ header-img: "img/post-bg-24.jpg"
                 </div>
                 <div class="item">
                     <i class="fa-solid fa-video"></i>
-                    <a href="https://youtu.be/YHW70ZAO7b0" target="_blank">Video</a>
+                    <a href="https://youtu.be/K7SkNMeXL0E?t=7040" target="_blank">Video</a>
                 </div>
             </div>
         </li>
