--- a/about.html
+++ b/about.html
@@ -186,7 +186,9 @@ header-img: "img/post-bg-24.jpg"
 <div class="en post-container">
     <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
     <h5>About Me</h5>
-    <p>A PhD student at Monash University, using deep learning and web development to improve intelligent transportation systems.</p>
+    <p>
+        A PhD student at Monash University, using deep learning and web development to improve intelligent transportation systems. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>
+    </p>
 
     <h5>Contact</h5>
     <p>
