--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -250,7 +250,7 @@ layout: default
 					<li>
 						<div class="cbp_tmlabel">
 							<h2>Learn to drive with a smart assistant</h2>
-							<time>2020 -</time>
+							<time>2021 -</time>
 							<img src="images/work-2021-drive.jpg">
 							<ul>
 								<li>
@@ -264,7 +264,7 @@ layout: default
 									<span>Wordpress</span>
 									<span>Deep Learning</span>
 									<span class="link">
-										<a target="_blank" href="http://www.v2tm.com/d2">View</a>
+										<a target="_blank" href="https://www.audrive.net/demo">View Demo</a>
 									</span>
 								</li>
 							</ul>
