--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -249,22 +249,22 @@ layout: default
 					<!-- Project Start -->
 					<li>
 						<div class="cbp_tmlabel">
-							<h2>Learn to drive with a smart assistant</h2>
+							<h2>AUDrive.net - A smart drive learning assistant</h2>
 							<time>2021 -</time>
-							<img src="images/work-2021-drive.jpg">
+							<img src="images/work-2022-drive.jpg">
 							<ul>
 								<li>
 									This is an ongoing project, which aims to help new drivers in Australia to learn traffic laws and driving skills faster via our web platform. According to the regulation and requirements given by VicRoads, a custom and user-friendly guiding website has been delivered for the Chinese community in Australia. Our initial contents about driving tips have already attracted about 500 active users every month. 
 									In the next stage, we will develop a web-based intelligent navigation app to provide customized practice routes and road information. This tool is supposed to help more learners to grasp basic driving skills and regulations faster by analysing customised driving behaviour and errors.
 								</li>
 								<li class="skill">
-									<span>PHP</span>
+									<span>Laravel</span>
+									<span>Tailwind</span>
 									<span>Python</span>
 									<span>JavaScript</span>
-									<span>Wordpress</span>
 									<span>Deep Learning</span>
 									<span class="link">
-										<a target="_blank" href="https://www.audrive.net/demo">View Demo</a>
+										<a target="_blank" href="https://www.audrive.net/about">View Demo</a>
 									</span>
 								</li>
 							</ul>
