--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@ header-img: "img/post-bg-24.jpg"
     <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
     <h5>About Me</h5>
     <p>
-        A Research Fellow at Swinburne University of Technology, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive<a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>
+        A Research Fellow at Swinburne University of Technology, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive</a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>
     </p>
 
     <h5>Contact</h5>
@@ -198,11 +198,15 @@ header-img: "img/post-bg-24.jpg"
     <h5>Publication</h5>
     <ul class="publication">
         <li>
-            Eichenberger, C., Neun, M., …, <b>Wang, B.</b>, …, et al. (2022). Traffic4cast at NeurIPS 2021 – Temporal and Spatial Few-Shot Transfer Learning in Gridded Geo-Spatial Processes. <i>NeurIPS 2021 Competition and Demonstration Track, PMLR</i>. (In Press)
+            Eichenberger, C., Neun, M., …, <b>Wang, B.</b>, …, et al. (2022). Traffic4cast at NeurIPS 2021 – Temporal and Spatial Few-Shot Transfer Learning in Gridded Geo-Spatial Processes. <i>NeurIPS 2021 Competition and Demonstration Track, PMLR</i>.
             <div class="links">
                 <div class="item">
                     <i class="fa-solid fa-book"></i>
-                    <a href="https://arxiv.org/abs/2203.17070" target="_blank">Paper</a>
+                    <a href="https://proceedings.mlr.press/v176/eichenberger22a.html" target="_blank">Paper</a>
+                </div>
+                <div class="item">
+                    <i class="fa-brands fa-github"></i>
+                    <a href="https://github.com/iarai/NeurIPS2021-traffic4cast" target="_blank">Github</a>
                 </div>
             </div>
         </li>
