--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@ header-img: "img/post-bg-24.jpg"
     <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
     <h5>About Me</h5>
     <p>
-        A Research Fellow at Swinburne University of Technology, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive</a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>
+        A Research Fellow at Swinburne University of Technology, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive</a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>.
     </p>
 
     <h5>Contact</h5>
@@ -211,7 +211,7 @@ header-img: "img/post-bg-24.jpg"
             </div>
         </li>
         <li>
-            <b>Wang, B.</b>, Mohajerpoor, R., Cai, C., Kim, I. & Vu H. L. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. (Presented at <i>Traffic4cast Competition, NeurIPS 2021</i>) 
+            <b>Wang, B.</b>, Mohajerpoor, R., Cai, C., Kim, I. & Vu H. L. (2021). Traffic4cast - Large-scale Traffic Prediction using 3DResNet and Sparse-UNet. Presented at <i>Traffic4cast Competition, NeurIPS 2021</i>.
             <div class="links">
                 <div class="item">
                     <i class="fa-solid fa-book"></i>
