--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ header-img: "img/post-bg-24.jpg"
     <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>
     <h5>联系</h5>
     <p>
-      Email: wbo at swin.edu.au <br>
+      Email: bo.wang at unimelb.edu.au <br>
     </p>
     <h5>文章</h5>
     <ul class="publication">
@@ -179,6 +179,7 @@ header-img: "img/post-bg-24.jpg"
         <li>IET Intelligent Transport Systems</li>
         <li>Transportation Letters</li>
         <li>Physica A: Statistical Mechanics and Its Applications</li>
+        <li>International Journal of Information Management Data Insights</li>
     </ul>
 </div>
 
@@ -187,12 +188,12 @@ header-img: "img/post-bg-24.jpg"
     <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
     <h5>About Me</h5>
     <p>
-        A Research Fellow at Swinburne University of Technology, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive</a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>.
+        A Research Fellow at the University of Melbourne, using deep learning and web development to improve intelligent transportation systems. Also the founder of <a href="https://audrive.net/about" target="_blank">AUDrive</a> and <a href="https://www.gdaydrive.com/" target="_blank">Gdaydrive</a>. Some projects can be found at my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>.
     </p>
 
     <h5>Contact</h5>
     <p>
-      Email: wbo at swin.edu.au <br>
+      Email: bo.wang at unimelb.edu.au <br>
     </p>
 
     <h5>Publication</h5>
@@ -350,6 +351,7 @@ header-img: "img/post-bg-24.jpg"
         <li>IET Intelligent Transport Systems</li>
         <li>Transportation Letters</li>
         <li>Physica A: Statistical Mechanics and Its Applications</li>
+        <li>International Journal of Information Management Data Insights</li>
     </ul>
 </div>
 
