--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -249,6 +249,32 @@ layout: default
 					<!-- Project Start -->
 					<li>
 						<div class="cbp_tmlabel">
+							<h2>ScourCast</h2>
+							<time>2024</time>
+							<img src="images/work-scour.jpg">
+							<ul>
+								<li>
+									This is a comprehensive web platform that manages the bridge scour data, including historical data and the prediction with different neural network models. 
+								</li>
+								<li class="skill">
+									<span>Laravel</span>
+									<span>Tailwind</span>
+									<span>Python</span>
+									<span>JavaScript</span>
+									<span>Mapbox</span>
+									<span>Deep Learning</span>
+									<span class="link">
+										<a target="_blank" href="https://www.scourcast.com/">View</a>
+									</span>
+								</li>
+							</ul>
+						</div>
+				    </li>
+				    <!-- Project End -->
+
+				    <!-- Project Start -->
+					<li>
+						<div class="cbp_tmlabel">
 							<h2>AUDrive.net - A smart drive learning assistant</h2>
 							<time>2021 -</time>
 							<img src="images/work-2022-drive.jpg">
