--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -290,7 +290,7 @@ layout: default
 									<span>JavaScript</span>
 									<span>Deep Learning</span>
 									<span class="link">
-										<a target="_blank" href="https://www.audrive.net/about">View Demo</a>
+										<a target="_blank" href="https://www.audrive.net/">View Demo</a>
 									</span>
 								</li>
 							</ul>
